# PlanBoard

./: .env.example  .gitignore  PERMISSIONS.md  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0452f3b0d67b_add_per_project_ticket_numbering.py  0ad4fdd92cf3_add_projects_and_project_members_tables.py  31f6049e96fc_cascade_project_deletion_fks.py  6e27ac61dab9_add_user_full_name.py  78c0ffd21acb_add_notifications_table.py  930c758e5239_remove_project_key_column.py  a1c2e4f6b8d0_add_cancelled_ticket_status.py  b3d9a1c5e7f2_make_ticket_numbers_globally_unique.py  df2de05f7857_add_users_and_refresh_tokens_tables.py  e6bfc8393d31_add_activity_logs_table.py  ea221015721f_add_tickets_and_comments_tables.py  ef66d563952f_cascade_delete_comments_when_ticket_.py
backend/app/: config.py  main.py
backend/app/core/: activity.py  deps.py  due_date_scheduler.py  notifications.py  rate_limit.py  security.py
backend/app/models/: __init__.py  activity_log.py  comment.py  notification.py  project.py  project_member.py  refresh_token.py  ticket.py  user.py
backend/app/routers/: activity.py  auth.py  dashboard.py  notifications.py  projects.py  search.py  tickets.py  users.py
backend/app/schemas/: __init__.py  activity.py  auth.py  dashboard.py  notification.py  project.py  search.py  ticket.py  user.py
frontend/: .env.example  index.html  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/api/: activity.ts  auth.ts  client.ts  dashboard.ts  (+5 more)
scripts/: seed_superadmin.py
(+18 files in other folders)
