[project]
name = "planboard-backend"
version = "0.1.0"
description = "PlanBoard backend — FastAPI + SQLAlchemy + PostgreSQL"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.2",
    "passlib[bcrypt]>=1.7",
    "bcrypt<4.1",
    "python-jose[cryptography]>=3.3",
    "pydantic-settings>=2.6",
    "websockets>=13.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
